force-app/main/default/objects/Opportunity/fields/Customer_Consent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Consent__c</fullName>
    <label>Customer Consent</label>
    <summaryFilterItems>
        <field>Loan_Documents__c.Document_Type__c</field>
        <operation>equals</operation>
        <value>Customer Consent From</value>
    </summaryFilterItems>
    <summaryForeignKey>Loan_Documents__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>