force-app/main/default/objects/Opportunity/fields/Date_of_Last_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Valuation__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Date of Last Valuation</label>
    <type>Date</type>
</CustomField>