force-app/main/default/objects/Opportunity/fields/Date_of_LOC_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_of_LOC_Approval__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of LOC Approval</label>
    <type>Date</type>
</CustomField>