force-app/main/default/objects/Opportunity/fields/Deduct_1st_moth_Payment_from_Loan__c.field-meta.xml
<CustomField>
    <fullName>Deduct_1st_moth_Payment_from_Loan__c</fullName>
    <label>Deduct 1st month Payment from Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>