force-app/main/default/objects/Opportunity/fields/Deposit_Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account_Balance__c</fullName>
    <label>Deposit Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>