force-app/main/default/objects/Opportunity/fields/Deposit_Account_Balance_LOC__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account_Balance_LOC__c</fullName>
    <label>Deposit Account Balance LOC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>