force-app/main/default/objects/Opportunity/fields/Deposit_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account_Number__c</fullName>
    <label>Deposit Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>