force-app/main/default/objects/Opportunity/fields/Desired_Monthly_Payment_Date_Auto__c.field-meta.xml
<CustomField>
    <fullName>Desired_Monthly_Payment_Date_Auto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Desired Monthly Payment Date Auto</label>
    <type>Date</type>
</CustomField>