force-app/main/default/objects/Opportunity/fields/Desired_Monthly_Repayment_Date_CC__c.field-meta.xml
<CustomField>
    <fullName>Desired_Monthly_Repayment_Date_CC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Desired Monthly Repayment Date CC</label>
    <type>Date</type>
</CustomField>