force-app/main/default/objects/Opportunity/fields/Discuss_Account_Opening_and_KYC_Requirem__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Account_Opening_and_KYC_Requirem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discuss A/C Opening and KYC Requirements</label>
    <type>Checkbox</type>
</CustomField>