force-app/main/default/objects/Opportunity/fields/E_mail__c.field-meta.xml
<CustomField>
    <fullName>E_mail__c</fullName>
    <formula>Account.PersonContact.Email</formula>
    <label>E-mail</label>
    <type>Text</type>
</CustomField>