force-app/main/default/objects/Opportunity/fields/Estimated_lead_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_lead_Value__c</fullName>
    <label>Estimated Lead Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>