force-app/main/default/objects/Opportunity/fields/Exception_Approved_by__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approved_by__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Approved by</label>
    <length>40</length>
    <type>Text</type>
</CustomField>