force-app/main/default/objects/Opportunity/fields/Exception_granted_for_this_Auto_Credit__c.field-meta.xml
<CustomField>
    <fullName>Exception_granted_for_this_Auto_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception granted for this Auto Credit</label>
    <type>Checkbox</type>
</CustomField>