force-app/main/default/objects/Opportunity/fields/Exception_granted_for_this_CC__c.field-meta.xml
<CustomField>
    <fullName>Exception_granted_for_this_CC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception granted for this CC</label>
    <type>Checkbox</type>
</CustomField>