force-app/main/default/objects/Opportunity/fields/Exception_granted_for_this_Unsecured_Loa__c.field-meta.xml
<CustomField>
    <fullName>Exception_granted_for_this_Unsecured_Loa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception granted for this Unsecured Loa</label>
    <type>Checkbox</type>
</CustomField>