force-app/main/default/objects/Opportunity/fields/Exceptional_Terms_for_UL_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_Terms_for_UL_Approved_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exceptional Terms for UL Approved By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>