force-app/main/default/objects/Opportunity/fields/Existing_monthly_debts_being_serviced__c.field-meta.xml
<CustomField>
    <fullName>Existing_monthly_debts_being_serviced__c</fullName>
    <label>Existing monthly debts being serviced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>