force-app/main/default/objects/Opportunity/fields/Financial_Institution__c.field-meta.xml
<CustomField>
    <fullName>Financial_Institution__c</fullName>
    <label>Financial Institution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financial_Institution_Secured_Line</valueSetName>
    </valueSet>
</CustomField>