force-app/main/default/objects/Opportunity/fields/Forced_Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Forced_Sale_Value__c</fullName>
    <label>Forced Sale Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>