force-app/main/default/objects/Opportunity/fields/Get_Credit_Forms_For_Credit_Bureau__c.field-meta.xml
<CustomField>
    <fullName>Get_Credit_Forms_For_Credit_Bureau__c</fullName>
    <label>Request Credit Reports</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>