force-app/main/default/objects/Opportunity/fields/Get_Customer_Consent__c.field-meta.xml
<CustomField>
    <fullName>Get_Customer_Consent__c</fullName>
    <formula>IF( Customer_Consent__c  &gt;= 0 , &#39;Received&#39; , &#39;Not Received&#39;)</formula>
    <label>Get Customer Consent</label>
    <type>Text</type>
</CustomField>