force-app/main/default/objects/Opportunity/fields/Gross_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Gross_Monthly_Income__c</fullName>
    <label>Gross Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>