force-app/main/default/objects/Opportunity/fields/Include_1st_Year_Premium_in_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Include_1st_Year_Premium_in_Loan_Amount__c</fullName>
    <label>Include 1st Year Premium in Loan Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes (Include in Loan Amount)</fullName>
            </value>
            <value>
                <fullName>No (Paid by the Applicant)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>