force-app/main/default/objects/Opportunity/fields/Include_in_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Loan_Amount__c</fullName>
    <description>No - Paid by applicant 
Yes - Include in Loan Amount</description>
    <label>Include in Loan Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No - Paid by applicant</fullName>
            </value>
            <value>
                <fullName>Yes - Include in Loan Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>