force-app/main/default/objects/Opportunity/fields/Include_Moratorium_on_Loan_Payments__c.field-meta.xml
<CustomField>
    <fullName>Include_Moratorium_on_Loan_Payments__c</fullName>
    <label>Include Moratorium on Loan Payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>