force-app/main/default/objects/Opportunity/fields/Include_Supplementary_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Include_Supplementary_Applicants__c</fullName>
    <label>Include Supplementary Applicants</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>