force-app/main/default/objects/Opportunity/fields/Indicate_Applicable_Processing_Fees__c.field-meta.xml
<CustomField>
    <fullName>Indicate_Applicable_Processing_Fees__c</fullName>
    <label>Indicate Applicable Processing Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>