force-app/main/default/objects/Opportunity/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Insurer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>