force-app/main/default/objects/Opportunity/fields/interest_in_JN_Life_CC_Creditor_Life_iIn__c.field-meta.xml
<CustomField>
    <fullName>interest_in_JN_Life_CC_Creditor_Life_iIn__c</fullName>
    <label>interest in JN Life CC Creditor Life iIn</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>