force-app/main/default/objects/Opportunity/fields/Interest_Rate_Request_Auto__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Request_Auto__c</fullName>
    <label>Interest Rate Request Auto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>