force-app/main/default/objects/Opportunity/fields/Interested_in_Creditor_Life_Unsecured__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Creditor_Life_Unsecured__c</fullName>
    <label>Interested in Creditor Life Unsecured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>