force-app/main/default/objects/Opportunity/fields/Interested_In_JN_Bulk_Premium_Life_Ins__c.field-meta.xml
<CustomField>
    <fullName>Interested_In_JN_Bulk_Premium_Life_Ins__c</fullName>
    <label>Interested In JN Bulk Premium Life Ins</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>