force-app/main/default/objects/Opportunity/fields/Is_Deposit_Acc_Hypothecated_LOC__c.field-meta.xml
<CustomField>
    <fullName>Is_Deposit_Acc_Hypothecated_LOC__c</fullName>
    <label>Is Deposit Acc Hypothecated LOC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>