force-app/main/default/objects/Opportunity/fields/Is_Deposit_Account_Hypothecated__c.field-meta.xml
<CustomField>
    <fullName>Is_Deposit_Account_Hypothecated__c</fullName>
    <description>Is deposit account hypothecated for another loan</description>
    <label>Is Deposit Account Hypothecated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>