force-app/main/default/objects/Opportunity/fields/Is_Property_Insured__c.field-meta.xml
<CustomField>
    <fullName>Is_Property_Insured__c</fullName>
    <label>Is Property Insured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>