force-app/main/default/objects/Opportunity/fields/IsfromLead__c.field-meta.xml
<CustomField>
    <fullName>IsfromLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsfromLead</label>
    <type>Checkbox</type>
</CustomField>