force-app/main/default/objects/Opportunity/fields/JNGI_Motor_Premium_1st_Year__c.field-meta.xml
<CustomField>
    <fullName>JNGI_Motor_Premium_1st_Year__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JNGI Motor Premium 1st Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>