force-app/main/default/objects/Opportunity/fields/Last_Contact_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Attempt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Contact Attempt</label>
    <type>DateTime</type>
</CustomField>