force-app/main/default/objects/Opportunity/fields/Line_Of_Credit__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Line Of Credit</label>
    <type>Checkbox</type>
</CustomField>