force-app/main/default/objects/Opportunity/fields/Line_of_Credit_Phoenix_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Credit_Phoenix_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Line of Credit Phoenix Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>