force-app/main/default/objects/Opportunity/fields/Line_Of_Credit_RIM_Client_No__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Credit_RIM_Client_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Line Of Credit RIM/Client No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>