force-app/main/default/objects/Opportunity/fields/Loan_Amount_Auto1__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_Auto1__c</fullName>
    <label>Loan Amount Auto1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>