force-app/main/default/objects/Opportunity/fields/Loan_Amount_Auto__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_Auto__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Amount Auto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>