force-app/main/default/objects/Opportunity/fields/Loan_Path__c.field-meta.xml
<CustomField>
    <fullName>Loan_Path__c</fullName>
    <label>Loan Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conduct Customer Background Checks</fullName>
                <default>true</default>
                <label>Conduct Customer Background Checks</label>
            </value>
            <value>
                <fullName>Preform Exception Handling</fullName>
                <label>Perform Exception Handlin</label>
            </value>
            <value>
                <fullName>Collect and Check Customer Documents</fullName>
            </value>
            <value>
                <fullName>Complete Applicant Profile(s)</fullName>
            </value>
            <value>
                <fullName>Complete Product Details</fullName>
            </value>
            <value>
                <fullName>Generate Application Documents</fullName>
            </value>
            <value>
                <fullName>Submit Loan</fullName>
            </value>
            <value>
                <fullName>ADJUDICATION: AWAIT CREDIT DECISION</fullName>
            </value>
            <value>
                <fullName>Post Submission Contact - RESUBMIT LOAN</fullName>
            </value>
            <value>
                <fullName>Post Submission Contact – CUSTOMER SIGN PROCESSING DOCUMENTS</fullName>
            </value>
            <value>
                <fullName>Closing Step</fullName>
            </value>
            <value>
                <fullName>CONDUCT CUSTOMER INTERVIEW</fullName>
                <isActive>false</isActive>
                <label>CONDUCT CUSTOMER INTERVIEW</label>
            </value>
            <value>
                <fullName>Record Lost</fullName>
                <isActive>false</isActive>
                <label>Record Lost</label>
            </value>
            <value>
                <fullName>Record Opportunity As WON</fullName>
                <isActive>false</isActive>
                <label>Record Opportunity As WON</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>