force-app/main/default/objects/Opportunity/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <label>Loan Purpose Auto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loan_Purpose_auto</valueSetName>
    </valueSet>
</CustomField>